--- a/css/inde.css
+++ b/css/inde.css
@@ -145,7 +145,7 @@ h2{
 }
 
 #Asado{
-    background-image: url(imagenes/Imagen\ de\ WhatsApp\ 2025-05-05\ a\ las\ 21.14.32_ac05e4d9.jpg);
+    background-image: url(imagenes/Imagen de WhatsApp 2025-05-05 a las 21.14.32_ac05e4d9.jpg);
     background-size: cover;
     background-position: center;
     animation-delay: 14.8s;
