--- a/css/inde.css
+++ b/css/inde.css
@@ -152,7 +152,8 @@ h2{
 }
 
 #Chorizo{
-    background-image: url(imagenes/Chorizo.jpg);
+    background-image: url(Elhogar/imagenes
+/Chorizo.jpg);
     background-size: cover;
     background-position: center;
     animation-delay: 19.5s;
